# AppToolkit

./: AppToolkit.h  AppToolkitDefs.h  Application.cpp  Application.h  Build.bat  CMakeLists.txt  IApp.h  IAppCleanup.h  IAppInitializer.h  IAppRenderer.h  IAppUpdater.h  IAppUtils.h  InputDefs.h  Install.bat  IuiPresenter.h  README.md  WindowProperties.h
Src/: Application.cpp  Application.h  CMakeLists.txt  GlfwContext.cpp  GlfwContext.h  IAppRenderer.h  IAppUtils.h  InputDefs.h  IuiPresenter.h  OpenGLHelper.cpp  OpenGLHelper.h  UiContext.cpp  UiContext.h  main.cpp
_internal/: AppToolkit.cpp  Application.cpp  Application.h  GlfwContext.cpp  GlfwContext.h  InputStatus.cpp  InputStatus.h  OpenGLHelper.cpp  OpenGLHelper.h  UiContext.cpp  UiContext.h
